--- a/configs/WRLinux9/test_configs.yaml
+++ b/configs/WRLinux9/test_configs.yaml
@@ -9,7 +9,7 @@
   - TEST_TARGET_IP = "localhost"
   - TEST_SERVER_IP = "localhost"
   - TEST_SUITES = "ping ssh df date scp pam perl python rpm"
-  lava_test_repo: git://ala-lxgit.wrs.com/lpd-ops/lava-test.git
+  lava_test_repo: https://github.com/ywangwrs/lava-test.git
   aws-ec2_qemu-x86_64:
     job_template: lava-test/jobs/templates/wrlinux-9/x86_64_qemu_job_oeqa-default-test_template.yaml
     timeout: 300
@@ -38,7 +38,7 @@
   build_cmd_for_test:
   build_options:
   - IMAGE_INSTALL_append += "python3-pip"
-  lava_test_repo: git://ala-lxgit.wrs.com/lpd-ops/lava-test.git
+  lava_test_repo: https://github.com/ywangwrs/lava-test.git
   aws-ec2_qemu-x86_64:
     job_template: lava-test/jobs/templates/wrlinux-9/x86_64_qemu_job_lava-smoke-test_template.yaml
     timeout: 300
